Jenkins - Increasing memory to 1536 MB.